syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "proto/product";

service ProfileService {
  rpc RegisterUser(User) returns (google.protobuf.Empty) {}
  rpc RegisterBusinessUser(BusinessUser) returns (google.protobuf.Empty) {}
}

message User {
  string Username = 1;
  string Email = 2;
  string FirstName = 3;
  string LastName = 4;
  string Town = 5;
  string Gender = 6;
}

message BusinessUser {
  string Username = 1;
  string Email = 2;
  string Website = 3;
  string CompanyName = 4;
}
